--- a/darknet_ros_msgs/CMakeLists.txt
+++ b/darknet_ros_msgs/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.12)
 
-project(darknet_rsl_msgs)
+project(darknet_ros_msgs)
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
