--- a/darknet_ros_msgs/package.xml
+++ b/darknet_ros_msgs/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package>
-  <name>darknet_rsl_msgs</name>
+  <name>darknet_ros_msgs</name>
   <version>0.1.0</version>
   <description>ROS message definitions for YOLO in ROS.</description>
   <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
   <license>MIT</license>
-  <url type="marko.bjelonic@mavt.ethz.ch">https://bitbucket.org/ethz-asl-lr/darknet_rsl</url>
+  <url type="marko.bjelonic@mavt.ethz.ch">https://bitbucket.org/ethz-asl-lr/darknet_ros</url>
   <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>
 
   <buildtool_depend>catkin</buildtool_depend>
