Added integration test [todo: need to check if bounding boxes are at right place.]
Former-commit-id: 109285ddceb4e0565df71ce2b6834be68194eab1

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -268,3 +268,21 @@ else()
     ${catkin_LIBRARIES}
   )
 endif()
+
+#############
+## Testing ##
+#############
+
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+
+  # Start up.
+  add_rostest_gtest(${PROJECT_NAME}_object_detection-test
+    test/object_detection.test
+    test/test_main.cpp
+    test/ObjectDetection.cpp
+  )
+  target_link_libraries(${PROJECT_NAME}_object_detection-test
+    ${catkin_LIBRARIES}
+  )
+endif()
