Added automatic download of the weights in the CMakeLists.txt.

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -189,11 +189,29 @@ else()
   )
 endif()
 
+# Download tiny-yolo-voc.weights
+set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/weights")
+set(FILE "${PATH}/tiny-yolo-voc.weights")
+message(STATUS "Checking and downloading tiny-yolo-voc.weights if needed ...")
+if (NOT EXISTS "${FILE}")
+	message(STATUS "... file does not exist. Downloading now ...")
+	execute_process(COMMAND wget http://pjreddie.com/media/files/tiny-yolo-voc.weights -P ${PATH})
+endif()
+
 #############
 ## Testing ##
 #############
 
 if(CATKIN_ENABLE_TESTING)
+  # Download yolo-voc.weights
+  set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/weights")
+  set(FILE "${PATH}/yolo-voc.weights")
+  message(STATUS "Checking and downloading yolo-voc.weights if needed ...")
+  if (NOT EXISTS "${FILE}")
+	  message(STATUS "... file does not exist. Downloading now ...")
+		execute_process(COMMAND wget http://pjreddie.com/media/files/yolo-voc.weights -P ${PATH})
+  endif()
+
   find_package(rostest REQUIRED)
 
   # Object detection in images.
