Fixed undefined reference to cvRound.

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -53,6 +53,7 @@ find_package(catkin REQUIRED
 
 # Enable OPENCV in darknet
 add_definitions(-DOPENCV)
+add_definitions(-O4 -g)
 
 catkin_package(
   CATKIN_DEPENDS
