--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -19,7 +19,7 @@ if (CUDA_FOUND)
   message(STATUS "CUDA Libararies: ${CUDA_LIBRARIES}")
   set(
     CUDA_NVCC_FLAGS
-    ${CUDA_NVCC_FLAGS};
+    ${CUDA_NVCC_FLAGS}; -std=c++11;
     -O3 -gencode arch=compute_61,code=sm_61
   )
   add_definitions(-DGPU)
@@ -71,6 +71,7 @@ catkin_package(
 if (CUDA_FOUND)
   include_directories(
     ${DARKNET_PATH}/src
+    ${DARKNET_PATH}/include
     include
     ${Boost_INCLUDE_DIRS}
     ${catkin_INCLUDE_DIRS}
@@ -86,43 +87,45 @@ if (CUDA_FOUND)
     src/object_detector_demo.cpp
     src/image_interface.c
 
+    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/im2col.c
+    ${DARKNET_PATH}/src/activations.c             ${DARKNET_PATH}/src/image.c
+    ${DARKNET_PATH}/src/avgpool_layer.c           ${DARKNET_PATH}/src/layer.c
+    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/list.c
+    ${DARKNET_PATH}/src/blas.c                    ${DARKNET_PATH}/src/local_layer.c
+    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/lstm_layer.c
+    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c
+    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/maxpool_layer.c
+    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/option_list.c
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/region_layer.c 
+    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/rnn_layer.c
+    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/route_layer.c
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/softmax_layer.c
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/tree.c
     ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/utils.c
-    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/convolutional_layer.c
-    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/lsd.c
-    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/image.c
-    ${DARKNET_PATH}/src/activations.c             ${DARKNET_PATH}/src/im2col.c
-    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/blas.c
-    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/dropout_layer.c
-    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/network.c                 ${DARKNET_PATH}/src/connected_layer.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/tree.c
-    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/captcha.c
-    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/writing.c
-    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/nightmare.c
-    ${DARKNET_PATH}/src/normalization_layer.c     ${DARKNET_PATH}/src/avgpool_layer.c
-    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/dice.c
-    ${DARKNET_PATH}/src/yolo.c                    ${DARKNET_PATH}/src/demo.c
-    ${DARKNET_PATH}/src/layer.c                   ${DARKNET_PATH}/src/compare.c
-    ${DARKNET_PATH}/src/classifier.c              ${DARKNET_PATH}/src/local_layer.c
-    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/rnn_layer.c
-    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/rnn.c
-    ${DARKNET_PATH}/src/rnn_vid.c                 ${DARKNET_PATH}/src/crnn_layer.c
-    ${DARKNET_PATH}/src/voxel.c                   ${DARKNET_PATH}/src/tag.c
-    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/go.c
-    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/art.c
-    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/super.c                   ${DARKNET_PATH}/src/detector.c
-    ${DARKNET_PATH}/src/regressor.c
+    ${DARKNET_PATH}/src/gru_layer.c
 
+    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/regressor.c
+    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/rnn.c
+    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn_vid.c
+    ${DARKNET_PATH}/examples/classifier.c         ${DARKNET_PATH}/examples/segmenter.c
+    ${DARKNET_PATH}/examples/coco.c               ${DARKNET_PATH}/examples/super.c
+    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/swag.c 
+    ${DARKNET_PATH}/examples/dice.c               ${DARKNET_PATH}/examples/tag.c
+    ${DARKNET_PATH}/examples/go.c                 ${DARKNET_PATH}/examples/voxel.c
+    ${DARKNET_PATH}/examples/lsd.c                ${DARKNET_PATH}/examples/writing.c
+    ${DARKNET_PATH}/examples/nightmare.c          ${DARKNET_PATH}/examples/yolo.c
+
+    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/deconvolutional_kernels.cu
+    ${DARKNET_PATH}/src/avgpool_layer_kernels.cu  ${DARKNET_PATH}/src/dropout_layer_kernels.cu
+    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/im2col_kernels.cu
+    ${DARKNET_PATH}/src/col2im_kernels.cu         ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
     ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/network_kernels.cu
-    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/im2col_kernels.cu
-    ${DARKNET_PATH}/src/col2im_kernels.cu         ${DARKNET_PATH}/src/blas_kernels.cu
-    ${DARKNET_PATH}/src/crop_layer_kernels.cu     ${DARKNET_PATH}/src/dropout_layer_kernels.cu
-    ${DARKNET_PATH}/src/maxpool_layer_kernels.cu  ${DARKNET_PATH}/src/avgpool_layer_kernels.cu
-    ${DARKNET_PATH}/src/deconvolutional_kernels.cu
+    ${DARKNET_PATH}/src/crop_layer_kernels.cu
   )
 
   target_link_libraries(${PROJECT_NAME}
@@ -150,36 +153,38 @@ else()
     src/object_detector_demo.cpp
     src/image_interface.c
 
+    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/im2col.c
+    ${DARKNET_PATH}/src/activations.c             ${DARKNET_PATH}/src/image.c
+    ${DARKNET_PATH}/src/avgpool_layer.c           ${DARKNET_PATH}/src/layer.c
+    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/list.c
+    ${DARKNET_PATH}/src/blas.c                    ${DARKNET_PATH}/src/local_layer.c
+    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/lstm_layer.c
+    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c
+    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/maxpool_layer.c
+    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/option_list.c
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/region_layer.c 
+    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/rnn_layer.c
+    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/route_layer.c
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/softmax_layer.c
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/tree.c
     ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/utils.c
-    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/convolutional_layer.c
-    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/lsd.c
-    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/image.c
-    ${DARKNET_PATH}/src/activations.c             ${DARKNET_PATH}/src/im2col.c
-    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/blas.c
-    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/dropout_layer.c
-    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/network.c                 ${DARKNET_PATH}/src/connected_layer.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/tree.c
-    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/captcha.c
-    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/writing.c
-    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/nightmare.c
-    ${DARKNET_PATH}/src/normalization_layer.c     ${DARKNET_PATH}/src/avgpool_layer.c
-    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/dice.c
-    ${DARKNET_PATH}/src/yolo.c                    ${DARKNET_PATH}/src/demo.c
-    ${DARKNET_PATH}/src/layer.c                   ${DARKNET_PATH}/src/compare.c
-    ${DARKNET_PATH}/src/classifier.c              ${DARKNET_PATH}/src/local_layer.c
-    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/rnn_layer.c
-    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/rnn.c
-    ${DARKNET_PATH}/src/rnn_vid.c                 ${DARKNET_PATH}/src/crnn_layer.c
-    ${DARKNET_PATH}/src/voxel.c                   ${DARKNET_PATH}/src/tag.c
-    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/go.c
-    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/art.c
-    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/super.c                   ${DARKNET_PATH}/src/detector.c
-    ${DARKNET_PATH}/src/regressor.c
+    ${DARKNET_PATH}/src/gru_layer.c
+
+    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/regressor.c
+    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/rnn.c
+    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn_vid.c
+    ${DARKNET_PATH}/examples/classifier.c         ${DARKNET_PATH}/examples/segmenter.c
+    ${DARKNET_PATH}/examples/coco.c               ${DARKNET_PATH}/examples/super.c
+    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/swag.c 
+    ${DARKNET_PATH}/examples/dice.c               ${DARKNET_PATH}/examples/tag.c
+    ${DARKNET_PATH}/examples/go.c                 ${DARKNET_PATH}/examples/voxel.c
+    ${DARKNET_PATH}/examples/lsd.c                ${DARKNET_PATH}/examples/writing.c
+    ${DARKNET_PATH}/examples/nightmare.c          ${DARKNET_PATH}/examples/yolo.c
   )
 
   target_link_libraries(${PROJECT_NAME}
