Fixed a clerical error in some config files that led to a multitude of objects being mislabelled when using the standard set of COCO labels.

--- a/darknet_ros/config/tiny_yolo.yaml
+++ b/darknet_ros/config/tiny_yolo.yaml
@@ -30,7 +30,8 @@ yolo_model:
       - bench
       - bird
       - cat
-      - doghorse
+      - dog
+      - horse
       - sheep
       - cow
       - elephant
