--- a/darknet_ros/config/yolo.yaml
+++ b/darknet_ros/config/yolo.yaml
@@ -30,7 +30,8 @@ yolo_model:
       - bench
       - bird
       - cat
-      - doghorse
+      - dog
+      - horse
       - sheep
       - cow
       - elephant
