--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -19,8 +19,15 @@ if (CUDA_FOUND)
   message(STATUS "CUDA Libararies: ${CUDA_LIBRARIES}")
   set(
     CUDA_NVCC_FLAGS
-    ${CUDA_NVCC_FLAGS}; -std=c++11;
-    -O3 -gencode arch=compute_61,code=sm_61
+    ${CUDA_NVCC_FLAGS};
+    -O3
+    -gencode arch=compute_20,code=[sm_20,sm_21]
+    -gencode arch=compute_30,code=sm_30
+    -gencode arch=compute_35,code=sm_35
+    -gencode arch=compute_50,code=[sm_50,compute_50]
+    -gencode arch=compute_52,code=[sm_52,compute_52]
+    -gencode arch=compute_61,code=sm_61
+    -gencode arch=compute_62,code=sm_62
   )
   add_definitions(-DGPU)
 else()
