--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -5,7 +5,7 @@
   <description>ROS package to use YOLO in ROS.</description>
   <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
   <license>MIT</license>
-  <url type="marko.bjelonic@mavt.ethz.ch">https://bitbucket.org/leggedrobotics/darknet_ros</url>
+  <url type="website">https://bitbucket.org/leggedrobotics/darknet_ros</url>
   <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -21,7 +21,7 @@
   <depend>message_generation</depend>
   <depend>darknet_ros_msgs</depend>
   <depend>actionlib</depend>
-  
+
   <!-- Test dependencies -->
   <test_depend>rostest</test_depend>
 </package>
