--- a/darknet_ros/config/ros.yaml
+++ b/darknet_ros/config/ros.yaml
@@ -29,6 +29,6 @@ publishers:
 image_view:
 
   enable_opencv: true
-  use_darknet: false
+  use_darknet: true
   wait_key_delay: 2
   enable_console_output: false
