--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -5,7 +5,7 @@
   <description>ROS package to use YOLO in ROS.</description>
   <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
   <license>BSD</license>
-  <url type="website">https://bitbucket.org/leggedrobotics/darknet_ros</url>
+  <url type="website">https://github.com/leggedrobotics/darknet_ros</url>
   <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>
 
   <buildtool_depend>catkin</buildtool_depend>
