Adapted package description.

--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>darknet_ros</name>
   <version>1.1.2</version>
-  <description>ROS package to use YOLO in ROS.</description>
+  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
   <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
   <license>BSD</license>
   <url type="website">https://github.com/leggedrobotics/darknet_ros</url>
