--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -21,7 +21,6 @@ if (CUDA_FOUND)
     CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS};
     -O3
-    -gencode arch=compute_20,code=[sm_20,sm_21]
     -gencode arch=compute_30,code=sm_30
     -gencode arch=compute_35,code=sm_35
     -gencode arch=compute_50,code=[sm_50,compute_50]
@@ -104,39 +103,36 @@ if (CUDA_FOUND)
     ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/list.c
     ${DARKNET_PATH}/src/blas.c                    ${DARKNET_PATH}/src/local_layer.c
     ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/lstm_layer.c
-    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/maxpool_layer.c
-    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/network.c
-    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/normalization_layer.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/option_list.c
-    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/region_layer.c
-    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/rnn_layer.c
-    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/route_layer.c
-    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/softmax_layer.c
-    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/tree.c
-    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/utils.c
-    ${DARKNET_PATH}/src/gru_layer.c
+    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c           
+    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/maxpool_layer.c
+    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/option_list.c
+    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/region_layer.c
+    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/rnn_layer.c
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/route_layer.c
+    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
+    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/tree.c
+    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/utils.c
 
-    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/regressor.c
-    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/rnn.c
-    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn_vid.c
+    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/lsd.c
+    ${DARKNET_PATH}/examples/attention.c          ${DARKNET_PATH}/examples/nightmare.c
+    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/regressor.c
+    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn.c
     ${DARKNET_PATH}/examples/classifier.c         ${DARKNET_PATH}/examples/segmenter.c
     ${DARKNET_PATH}/examples/coco.c               ${DARKNET_PATH}/examples/super.c
-    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/swag.c
-    ${DARKNET_PATH}/examples/dice.c               ${DARKNET_PATH}/examples/tag.c
-    ${DARKNET_PATH}/examples/go.c                 ${DARKNET_PATH}/examples/voxel.c
-    ${DARKNET_PATH}/examples/lsd.c                ${DARKNET_PATH}/examples/writing.c
-    ${DARKNET_PATH}/examples/nightmare.c          ${DARKNET_PATH}/examples/yolo.c
-
-    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/deconvolutional_kernels.cu
-    ${DARKNET_PATH}/src/avgpool_layer_kernels.cu  ${DARKNET_PATH}/src/dropout_layer_kernels.cu
-    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/im2col_kernels.cu
-    ${DARKNET_PATH}/src/col2im_kernels.cu         ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
-    ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/network_kernels.cu
-    ${DARKNET_PATH}/src/crop_layer_kernels.cu
+    ${DARKNET_PATH}/examples/darknet.c            ${DARKNET_PATH}/examples/tag.c   
+    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/yolo.c               
+    ${DARKNET_PATH}/examples/go.c                 
+                    
+    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/crop_layer_kernels.cu
+    ${DARKNET_PATH}/src/avgpool_layer_kernels.cu  ${DARKNET_PATH}/src/deconvolutional_kernels.cu
+    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/dropout_layer_kernels.cu
+    ${DARKNET_PATH}/src/col2im_kernels.cu         ${DARKNET_PATH}/src/im2col_kernels.cu
+    ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
   )
 
   target_link_libraries(${PROJECT_NAME}_lib
@@ -169,32 +165,30 @@ else()
     ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/list.c
     ${DARKNET_PATH}/src/blas.c                    ${DARKNET_PATH}/src/local_layer.c
     ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/lstm_layer.c
-    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/maxpool_layer.c
-    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/network.c
-    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/normalization_layer.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/option_list.c
-    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/region_layer.c
-    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/rnn_layer.c
-    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/route_layer.c
-    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/softmax_layer.c
-    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/tree.c
-    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/utils.c
-    ${DARKNET_PATH}/src/gru_layer.c
+    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c           
+    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/maxpool_layer.c
+    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/option_list.c
+    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/region_layer.c
+    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/rnn_layer.c
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/route_layer.c
+    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
+    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/tree.c
+    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/utils.c
 
-    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/regressor.c
-    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/rnn.c
-    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn_vid.c
+    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/lsd.c
+    ${DARKNET_PATH}/examples/attention.c          ${DARKNET_PATH}/examples/nightmare.c
+    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/regressor.c
+    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn.c
     ${DARKNET_PATH}/examples/classifier.c         ${DARKNET_PATH}/examples/segmenter.c
     ${DARKNET_PATH}/examples/coco.c               ${DARKNET_PATH}/examples/super.c
-    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/swag.c
-    ${DARKNET_PATH}/examples/dice.c               ${DARKNET_PATH}/examples/tag.c
-    ${DARKNET_PATH}/examples/go.c                 ${DARKNET_PATH}/examples/voxel.c
-    ${DARKNET_PATH}/examples/lsd.c                ${DARKNET_PATH}/examples/writing.c
-    ${DARKNET_PATH}/examples/nightmare.c          ${DARKNET_PATH}/examples/yolo.c
+    ${DARKNET_PATH}/examples/darknet.c            ${DARKNET_PATH}/examples/tag.c   
+    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/yolo.c               
+    ${DARKNET_PATH}/examples/go.c                 
   )
 
   target_link_libraries(${PROJECT_NAME}_lib
