Applied first changes for yolo v3.

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -117,6 +117,8 @@ if (CUDA_FOUND)
     ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
     ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/tree.c
     ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/utils.c
+    ${DARKNET_PATH}/src/upsample_layer.c          ${DARKNET_PATH}/src/logistic_layer.c
+    ${DARKNET_PATH}/src/l2norm_layer.c            ${DARKNET_PATH}/src/yolo_layer.c
 
     ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/lsd.c
     ${DARKNET_PATH}/examples/attention.c          ${DARKNET_PATH}/examples/nightmare.c
@@ -179,6 +181,8 @@ else()
     ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
     ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/tree.c
     ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/utils.c
+    ${DARKNET_PATH}/src/upsample_layer.c          ${DARKNET_PATH}/src/logistic_layer.c
+    ${DARKNET_PATH}/src/l2norm_layer.c            ${DARKNET_PATH}/src/yolo_layer.c
 
     ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/lsd.c
     ${DARKNET_PATH}/examples/attention.c          ${DARKNET_PATH}/examples/nightmare.c
